[gd_scene load_steps=9 format=2]

[ext_resource path="res://scn_Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scn_Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://scr_Main.gd" type="Script" id=3]
[ext_resource path="res://scn_HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://dodge_assets/sounds/sfx__plop.wav" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -56.4706, -58.7755, 0, 0, 0, 0, 543.529, -58.7755, 0, 0, 0, 0, 543.529, 808.163, 0, 0, 0, 0, -56.4706, 808.163, 0, 0, 0, 0, -56.4706, -58.7755 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
mob_scene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.25098, 0.701961, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -429.0
color = Color( 0.176471, 0.294118, 0.756863, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -642.0
color = Color( 0.290196, 0.521569, 0.921569, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( -57.9765, -64 )
scale = Vector2( 1.24, 1.08889 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -56.4706, -58.7755 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.8

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
pitch_scale = 0.8

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
